<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">F-Transfer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="no_pic">无法显示</string>
    <string name="file">文档</string>
    <string name="pic">图片</string>
    <string name="movie">视频</string>
    <string name="music">音频</string>
    <string name="apk">应用</string>
    <string name="zips">压缩文件</string>
    <string name="file_num">(0)</string>
    <string name="dialog_yes">确认</string>
    <string name="dialog_no">取消</string>
    <string name="dialog_hint">传输文件的个数</string>
    <string name="info_dialog_title">文件详细信息</string>
    <string name="tab1">传送</string>
    <string name="tab2">分类</string>
    <string name="tab3">本地</string>
    <string name="receive_files">接收文件</string>
    <string name="send_files">发送文件</string>
    <string name="find_peers">搜索手机</string>
    <string name="find_computer">搜索电脑</string>
    <string name="send_online">在线发送</string>
    <string name="confirm_send">确认发送 ？</string>
    <string name="sendFile">发送文件</string>
    <string name="receiveFile">接收文件</string>
    <string name="receive_files_history">接收记录</string>
    <string name="send_files_history">发送记录</string>

</resources>