<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_tv_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/file_icon_w_h"
        android:background="@color/theme_blue"
        android:gravity="center"
        android:text="@string/info_dialog_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/header_text_size" />

    <TextView
        android:id="@+id/dialog_tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/file_desc_margin_left"
        android:layout_marginTop="@dimen/file_desc_margin_left"
        android:text="@string/confirm_send"
        android:textColor="@android:color/black"
        android:textSize="@dimen/header_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp" >

        <Button
            android:id="@+id/bt_yes_newname"
            style="none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_yes" />

        <Button
            android:id="@+id/bt_no_newname"
            style="none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/dialog_no" />
    </LinearLayout>

</LinearLayout>