<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/file_icon_w_h"
        android:background="@color/theme_blue" />

    <EditText
        android:id="@+id/dialog_et_newname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp" >

        <Button
            android:id="@+id/bt_yes_newname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_yes" 
            style="none"/>

        <Button
            android:id="@+id/bt_no_newname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:text="@string/dialog_no" 
             style="none"/>
    </LinearLayout>

</LinearLayout>