<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_header_height"
        layout="@layout/layout_header" />

    <ListView
        android:id="@+id/lv_peers"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/divider"
        android:dividerHeight="1dp" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:padding="4dp" >

        <Button
            android:id="@+id/bt_find_peers"
            style="none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/find_peers"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_find_computer"
            style="none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/file_icon_margin_left"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/find_computer"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_send_online"
            style="none"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/file_icon_margin_left"
            android:layout_weight="1"
            android:background="@drawable/button_bg"
            android:text="@string/send_online"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>